--- a/Netsy.Helpers/Netsy.Helpers.csproj
+++ b/Netsy.Helpers/Netsy.Helpers.csproj
@@ -60,6 +60,8 @@
     <Compile Include="JsonSerializerHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultData.cs" />
+    <Compile Include="ResultEventArgs.cs" />
+    <Compile Include="ResultStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CodeAnalysisDictionary.xml">
