--- a/Netsy.Helpers/Silverlight.Netsy.Helpers.csproj
+++ b/Netsy.Helpers/Silverlight.Netsy.Helpers.csproj
@@ -57,6 +57,8 @@
     <Compile Include="JsonSerializerHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultData.cs" />
+    <Compile Include="ResultEventArgs.cs" />
+    <Compile Include="ResultStatus.cs" />
     <Compile Include="SilverlightNetsyException.cs" />
   </ItemGroup>
   <ItemGroup>
