--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -36,8 +36,11 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ShopCreateTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParamsCreateTest.cs" />
     <Compile Include="QueryParamsParseTest.cs" />
