--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParamsCreateTest.cs" />
     <Compile Include="QueryParamsParseTest.cs" />
+    <Compile Include="ShopParseTest.cs" />
     <Compile Include="UserCreateTest.cs" />
     <Compile Include="UserParseTest.cs" />
   </ItemGroup>
