--- a/Netsy.Datamodel/Netsy.DataModel.csproj
+++ b/Netsy.Datamodel/Netsy.DataModel.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParams.cs" />
     <Compile Include="ShopData\Shop.cs" />
+    <Compile Include="ShopData\Shops.cs" />
     <Compile Include="ShopData\ShopSection.cs" />
     <Compile Include="UserData\User.cs" />
     <Compile Include="UserData\Users.cs" />
