factored out service code with template method and lambda

--- a/Netsy.Core/Netsy.Core.csproj
+++ b/Netsy.Core/Netsy.Core.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="ServiceHelper.cs" />
     <Compile Include="UsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
