--- a/Netsy.Helpers/Netsy.Helpers.csproj
+++ b/Netsy.Helpers/Netsy.Helpers.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultEventArgs.cs" />
     <Compile Include="ResultStatus.cs" />
+    <Compile Include="StringHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CodeAnalysisDictionary.xml">
