--- a/Netsy.Core/Silverlight.Netsy.Core.csproj
+++ b/Netsy.Core/Silverlight.Netsy.Core.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceHelper.cs" />
     <Compile Include="UsersService.cs" />
   </ItemGroup>
   <ItemGroup>
