--- a/Netsy.Core/Netsy.Core.csproj
+++ b/Netsy.Core/Netsy.Core.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ServiceHelper.cs" />
+    <Compile Include="ShopService.cs" />
     <Compile Include="UsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
