--- a/Netsy.Core/Silverlight.Netsy.Core.csproj
+++ b/Netsy.Core/Silverlight.Netsy.Core.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHelper.cs" />
+    <Compile Include="ShopService.cs" />
     <Compile Include="UsersService.cs" />
   </ItemGroup>
   <ItemGroup>
