--- a/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
+++ b/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="NetsyData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShopTest.cs" />
     <Compile Include="UsersTest.cs" />
