Started on Listing data scructure

--- a/Netsy.Datamodel/Netsy.DataModel.csproj
+++ b/Netsy.Datamodel/Netsy.DataModel.csproj
@@ -55,6 +55,8 @@
   <ItemGroup>
     <Compile Include="DetailLevel.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="ListingData\Listing.cs" />
+    <Compile Include="ListingData\ListingState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParams.cs" />
     <Compile Include="ShopData\Shop.cs" />
