--- a/Netsy.Datamodel/Netsy.DataModel.csproj
+++ b/Netsy.Datamodel/Netsy.DataModel.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DetailLevel.cs" />
+    <Compile Include="GiftGuide.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ListingData\Listing.cs" />
     <Compile Include="ListingData\ListingImage.cs" />
