--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FeedbackCreateTest.cs" />
     <Compile Include="ListingCreateTest.cs" />
     <Compile Include="ShopCreateTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
