--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="FeedbackCreateTest.cs" />
     <Compile Include="ListingCreateTest.cs" />
+    <Compile Include="ListingParseTest.cs" />
     <Compile Include="ShopCreateTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParamsCreateTest.cs" />
