--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FeedbackCreateTest.cs" />
+    <Compile Include="FeedbackParseTest.cs" />
     <Compile Include="ListingCreateTest.cs" />
     <Compile Include="ListingParseTest.cs" />
     <Compile Include="ShopCreateTest.cs" />
