--- a/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
+++ b/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
@@ -44,11 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetShopDetailsTest.cs" />
+    <Compile Include="GetShopsByNameTest.cs" />
     <Compile Include="GetUserDetailsTest.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="NetsyData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShopTest.cs" />
+    <Compile Include="GetFeaturedSellersTest.cs" />
     <Compile Include="GetUsersByNameTest.cs" />
   </ItemGroup>
   <ItemGroup>
