--- a/Netsy.Interfaces/Netsy.Interfaces.csproj
+++ b/Netsy.Interfaces/Netsy.Interfaces.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IServerService.cs" />
     <Compile Include="IShopService.cs" />
     <Compile Include="IUsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
