--- a/Netsy.Interfaces/Silverlight.Netsy.Interfaces.csproj
+++ b/Netsy.Interfaces/Silverlight.Netsy.Interfaces.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IServerService.cs" />
     <Compile Include="IShopService.cs" />
     <Compile Include="IUsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
