--- a/Netsy.Datamodel/Netsy.DataModel.csproj
+++ b/Netsy.Datamodel/Netsy.DataModel.csproj
@@ -64,8 +64,11 @@
     <Compile Include="ListingData\ListingImage.cs" />
     <Compile Include="ListingData\Listings.cs" />
     <Compile Include="ListingData\ListingState.cs" />
+    <Compile Include="MethodTable.cs" />
+    <Compile Include="Ping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParams.cs" />
+    <Compile Include="ServerEpoch.cs" />
     <Compile Include="ShopData\Shop.cs" />
     <Compile Include="ShopData\Shops.cs" />
     <Compile Include="ShopData\ShopSection.cs" />
