--- a/Netsy.Datamodel/Silverlight.Netsy.DataModel.csproj
+++ b/Netsy.Datamodel/Silverlight.Netsy.DataModel.csproj
@@ -58,8 +58,11 @@
     <Compile Include="GiftGuide.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ListingData\Listings.cs" />
+    <Compile Include="MethodTable.cs" />
+    <Compile Include="Ping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParams.cs" />
+    <Compile Include="ServerEpoch.cs" />
     <Compile Include="SortField.cs" />
     <Compile Include="SortOrder.cs" />
     <Compile Include="UserData\User.cs" />
