--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FeedbackParseTest.cs" />
     <Compile Include="ListingCreateTest.cs" />
     <Compile Include="ListingParseTest.cs" />
+    <Compile Include="PingParseTest.cs" />
     <Compile Include="ShopCreateTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParamsCreateTest.cs" />
