--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ListingCreateTest.cs" />
     <Compile Include="ListingParseTest.cs" />
     <Compile Include="PingParseTest.cs" />
+    <Compile Include="ServerEpochParseTest.cs" />
     <Compile Include="ShopCreateTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryParamsCreateTest.cs" />
