--- a/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
+++ b/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GetFeaturedSellersTest.cs" />
     <Compile Include="GetUsersByNameTest.cs" />
+    <Compile Include="ServerEpochTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Netsy.Core\Netsy.Core.csproj">
