--- a/Netsy.Interfaces/Silverlight.Netsy.Interfaces.csproj
+++ b/Netsy.Interfaces/Silverlight.Netsy.Interfaces.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IListingService.cs" />
     <Compile Include="IServerService.cs" />
     <Compile Include="IShopService.cs" />
     <Compile Include="IUsersService.cs" />
