--- a/Netsy.Core/Netsy.Core.csproj
+++ b/Netsy.Core/Netsy.Core.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ServerService.cs" />
     <Compile Include="ServiceHelper.cs" />
     <Compile Include="ShopService.cs" />
+    <Compile Include="UriBuilder.cs" />
     <Compile Include="UsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
