--- a/Netsy.Core/Silverlight.Netsy.Core.csproj
+++ b/Netsy.Core/Silverlight.Netsy.Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHelper.cs" />
     <Compile Include="ShopService.cs" />
+    <Compile Include="UriBuilder.cs" />
     <Compile Include="UsersService.cs" />
   </ItemGroup>
   <ItemGroup>
