Test for GetAllListings

--- a/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
+++ b/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Listings\GetAllListingsTest.cs" />
     <Compile Include="Listings\GetListingDetailsTest.cs" />
     <Compile Include="Shop\GetFeaturedDetailsTest.cs" />
     <Compile Include="Server\GetMethodTableTest.cs" />
