tests on get listings by category

--- a/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
+++ b/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Listings\GetAllListingsTest.cs" />
     <Compile Include="Listings\GetListingDetailsTest.cs" />
+    <Compile Include="Listings\GetListingsByCategoryTest.cs" />
     <Compile Include="Shop\GetFeaturedDetailsTest.cs" />
     <Compile Include="Server\GetMethodTableTest.cs" />
     <Compile Include="Shop\GetShopDetailsTest.cs" />
