HSV color create tests

--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="FeedbackCreateTest.cs" />
     <Compile Include="FeedbackParseTest.cs" />
+    <Compile Include="HSVColorCreateTest.cs" />
     <Compile Include="ListingCreateTest.cs" />
     <Compile Include="ListingParseTest.cs" />
     <Compile Include="MethodTableParseTest.cs" />
