--- a/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
+++ b/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{CB24AD3D-1FFF-47E0-B161-F01E0EDD7D32}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -48,10 +48,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Listings\GetAllListingsTest.cs" />
+    <Compile Include="Listings\GetFrontFeaturedListingsTest.cs" />
     <Compile Include="Listings\GetListingDetailsTest.cs" />
     <Compile Include="Listings\GetListingsByCategoryTest.cs" />
     <Compile Include="Listings\GetListingsByColorAndKeywordsTest.cs" />
     <Compile Include="Listings\GetListingsByColorTest.cs" />
+    <Compile Include="Listings\GetListingsByKeywordTest.cs" />
+    <Compile Include="Listings\GetListingsByMaterialsTest.cs" />
+    <Compile Include="Listings\GetListingsByTagsTest.cs" />
     <Compile Include="Shop\GetFeaturedDetailsTest.cs" />
     <Compile Include="Server\GetMethodTableTest.cs" />
     <Compile Include="Shop\GetShopDetailsTest.cs" />
