--- a/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
+++ b/Netsy.DataModel.Test/Netsy.DataModel.Test.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1E7884B2-5EED-490E-A854-4EFDA472ED18}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -53,6 +53,7 @@
     <Compile Include="QueryParamsCreateTest.cs" />
     <Compile Include="QueryParamsParseTest.cs" />
     <Compile Include="ShopParseTest.cs" />
+    <Compile Include="TagsCategoriesParseTest.cs" />
     <Compile Include="UserCreateTest.cs" />
     <Compile Include="UserParseTest.cs" />
   </ItemGroup>
