--- a/Netsy.Datamodel/Netsy.DataModel.csproj
+++ b/Netsy.Datamodel/Netsy.DataModel.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{996A24F6-AAAF-4D00-B400-2B530192D857}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -78,6 +78,7 @@
     <Compile Include="ShopData\ShopSection.cs" />
     <Compile Include="SortField.cs" />
     <Compile Include="SortOrder.cs" />
+    <Compile Include="StringResults.cs" />
     <Compile Include="UserData\User.cs" />
     <Compile Include="UserData\Users.cs" />
     <Compile Include="UserData\UserStatus.cs" />
