--- a/Netsy.Core/Silverlight.Netsy.Core.csproj
+++ b/Netsy.Core/Silverlight.Netsy.Core.csproj
@@ -50,11 +50,15 @@
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FavoritesService.cs" />
+    <Compile Include="FeedbackService.cs" />
+    <Compile Include="GiftService.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ListingsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHelper.cs" />
     <Compile Include="ShopService.cs" />
+    <Compile Include="TagCategoryService.cs" />
     <Compile Include="UriBuilder.cs" />
     <Compile Include="UsersService.cs" />
   </ItemGroup>
