--- a/Netsy.Core/Silverlight.Netsy.Core.csproj
+++ b/Netsy.Core/Silverlight.Netsy.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ListingsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerService.cs" />
     <Compile Include="ServiceHelper.cs" />
     <Compile Include="ShopService.cs" />
     <Compile Include="TagCategoryService.cs" />
