use unity in Silverlight

--- a/Silverlight.Netsy.TestControl/Silverlight.Netsy.TestControl.csproj
+++ b/Silverlight.Netsy.TestControl/Silverlight.Netsy.TestControl.csproj
@@ -51,6 +51,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.Unity, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Program Files (x86)\Microsoft Unity Application Block 1.2 for Silverlight\Bin\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
