basic IOC plumbing in Silverlight control

--- a/Silverlight.Netsy.TestControl/Silverlight.Netsy.TestControl.csproj
+++ b/Silverlight.Netsy.TestControl/Silverlight.Netsy.TestControl.csproj
@@ -67,6 +67,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BaseViewModel.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -75,6 +76,8 @@
       <DependentUpon>ShopView.xaml</DependentUpon>
     </Compile>
     <Compile Include="ShopViewModel.cs" />
+    <Compile Include="UnityConfiguration.cs" />
+    <Compile Include="ViewModelLocator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
