--- a/Silverlight.Netsy.TestControl/Silverlight.Netsy.TestControl.csproj
+++ b/Silverlight.Netsy.TestControl/Silverlight.Netsy.TestControl.csproj
@@ -71,11 +71,12 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainPageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShopView.xaml.cs">
+    <Compile Include="Shop\ShopView.xaml.cs">
       <DependentUpon>ShopView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ShopViewModel.cs" />
+    <Compile Include="Shop\ShopViewModel.cs" />
     <Compile Include="UnityConfiguration.cs" />
     <Compile Include="ViewModelLocator.cs" />
   </ItemGroup>
@@ -88,7 +89,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:MarkupCompilePass1</Generator>
     </Page>
-    <Page Include="ShopView.xaml">
+    <Page Include="Shop\ShopView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:MarkupCompilePass1</Generator>
     </Page>
