--- a/Netsy/Netsy.csproj
+++ b/Netsy/Netsy.csproj
@@ -98,6 +98,16 @@
     <Compile Include="Interfaces\ITagCategoryService.cs" />
     <Compile Include="Interfaces\IUsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\FavoritesService.cs" />
+    <Compile Include="Services\FeedbackService.cs" />
+    <Compile Include="Services\GiftService.cs" />
+    <Compile Include="Services\ListingsService.cs" />
+    <Compile Include="Services\ServerService.cs" />
+    <Compile Include="Services\ServiceHelper.cs" />
+    <Compile Include="Services\ShopService.cs" />
+    <Compile Include="Services\TagCategoryService.cs" />
+    <Compile Include="Services\UriBuilder.cs" />
+    <Compile Include="Services\UsersService.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CodeAnalysisDictionary.xml">
@@ -106,9 +116,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Netsy.snk" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
