A few tests on helpers

--- a/Netsy.Test/Netsy.Test.csproj
+++ b/Netsy.Test/Netsy.Test.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataModel\ColorCreateTest.cs" />
@@ -56,6 +58,8 @@
     <Compile Include="DataModel\TagCategoryParseTest.cs" />
     <Compile Include="DataModel\UserCreateTest.cs" />
     <Compile Include="DataModel\UserParseTest.cs" />
+    <Compile Include="Helpers\DateTimeHelpersTest.cs" />
+    <Compile Include="Helpers\ResultStatusTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
