--- a/Netsy.Test/Netsy.Test.csproj
+++ b/Netsy.Test/Netsy.Test.csproj
@@ -60,7 +60,9 @@
     <Compile Include="DataModel\UserParseTest.cs" />
     <Compile Include="Helpers\DateTimeHelpersTest.cs" />
     <Compile Include="Helpers\EnumHelpersTest.cs" />
+    <Compile Include="Helpers\GenericEventArgsTest.cs" />
     <Compile Include="Helpers\ResultStatusTest.cs" />
+    <Compile Include="Helpers\StringHelpersTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
