--- a/Netsy/Silverlight.Netsy.csproj
+++ b/Netsy/Silverlight.Netsy.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DataModel\Feedback.cs" />
     <Compile Include="DataModel\FeedbackDisposition.cs" />
     <Compile Include="DataModel\Feedbacks.cs" />
+    <Compile Include="DataModel\Gender.cs" />
     <Compile Include="DataModel\GiftGuide.cs" />
     <Compile Include="DataModel\HSVColor.cs" />
     <Compile Include="DataModel\Listing.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Helpers\EnumHelpers.cs" />
     <Compile Include="Helpers\GenericEventArgs.cs" />
     <Compile Include="Helpers\GlobalSuppressions.cs" />
+    <Compile Include="Helpers\IntHelpers.cs" />
     <Compile Include="Helpers\JsonSerializerHelper.cs" />
     <Compile Include="Helpers\ResultEventArgs.cs" />
     <Compile Include="Helpers\ResultStatus.cs" />
