more Ui work - paging and viewmodels

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ Bin
 *.CodeAnalysisLog.xml
 *.lastcodeanalysissucceeded
 
+# files from imported dlls
+Microsoft.Practices.ObjectBuilder2.xml
+Microsoft.Practices.Unity.xml
